--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,13 +28,13 @@
         <div class='slide'>
           <div class='projects'>
             <h2>projects</h2>
-            <p>I'm interested in lighthearted, lightweight, responsive development</p>
+            <p>I'm interested in lightweight, responsive, lighthearted development</p>
           </div>
         </div>
         <div class='slide'>
           <div class='projects'>
             <h2 class='project-name'>commitr</h2>
-            <a href='https://www.npmjs.com/package/commitr'><div class='icon-holder'><i id='queue-icon' class="material-icons">queue</i></div></a>
+            <a href='https://www.npmjs.com/package/commitr'><div class='icon-holder'><i id='queue-icon' class="material-icons">view_comfy</i></div></a>
             <p>a node script that automatically makes github commits for job seekers, published on npm</p>
             <a class= 'git-link' href='https://github.com/dainchatel/commitr'><i class="fa fa-github"></i></a>
           </div>
