add new heree link and title

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,8 +41,8 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2 class='project-name'>here</h2>
-            <a href='https://ns-oomnvlkqtp.now.sh/'><i id='business-icon' class="material-icons">business</i></a>
+            <h2 class='project-name'>heree</h2>
+            <a href='https://build-frilpborwr.now.sh/'><i id='business-icon' class="material-icons">business</i></a>
             <p>a personal restaurant tracker built with react, react router + firebase</p>
             <a class= 'git-link' href='https://github.com/dainchatel/HereApp'><i class="fa fa-github"></i></a>
           </div>
