--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -93,7 +93,7 @@
   height: 10rem;
   width: 10rem;
   border-radius: 100%;
-  background-color: rgb(255,107,104);; }
+  background: radial-gradient(circle at 50% 120%, #ff6b68, #ff6b68 10%, #055194 80%, #121738 100%);
 
 .projects {
   display: flex;
@@ -102,9 +102,11 @@
   align-items: center; }
 
 #business-icon, #queue-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
-  font-size: 15rem;
   margin-top: -40px;
-  color: rgb(255,107,104);
+  background: radial-gradient(circle at 50% 120%, #ff6b68, #ff6b68 10%, #055194 80%, #121738 100%);
+  font-size: 15rem;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
 }
 
 #third {
@@ -112,7 +114,7 @@
   color: transparent;
  }
   #third h2 {
-    font-weight: 800;
+    font-weight: 900;
     text-transform: uppercase;
     margin-top: 1vh;
     font-size: 3rem;
