--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -48,11 +48,11 @@
   margin: 0 auto; }
   .touchless h1 {
     padding-bottom: 0;
-    font-weight: 300;
+    font-weight: 600;
     margin: 1rem 1rem -.2rem 1rem;
     text-transform: uppercase;
     font-size: 5rem;
-    letter-spacing: -1.5vw; }
+    letter-spacing: -5.5px; }
   .touchless .mob-scroll-dir {
     margin-top: 8rem;
     margin-bottom: 1rem;
@@ -61,6 +61,9 @@
     font-weight: 100;
     animation: bounce 1s infinite; }
   .touchless .scroll-dir {
+    display: none;
+  }
+  .touchless .gest-explainer {
     display: none;
   }
   .touchless h2 {
