--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,3 +1,24 @@
+@keyframes bounce {
+  0% {
+  transform:translateY(0%);
+  }
+  20% {
+    transform:translateY(3%);
+  }
+  40% {
+    transform:translateY(0%);
+  }
+  60% {
+    transform:translateY(-2%);
+  }
+  80% {
+    transform:translateY(1%);
+  }
+  100% {
+    transform:translateY(0%);
+  }
+}
+
 .fp-tableCell {
   display: flex;
   align-items: center;
@@ -23,31 +44,78 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 0 auto;
+  position: relative;
   h1 {
-    margin: 0 1rem -.5rem 1rem;
+    margin: 3rem 1rem -.5rem 1rem;
     text-transform: uppercase;
-    font-size: 10rem;
+    font-size: 9rem;
     letter-spacing: -1.2vw;
-    font-weight: 500;
+    font-weight: 600;
     // -webkit-text-stroke: 1px rgb(255,76,6);
     color: white;
     // -webkit-text-stroke: 8px white;
   }
   .scroll-dir {
-    margin-top: 13rem;
-    font-size: 1rem;
-    text-transform: lowercase;
+    font-size: 3rem;
+    margin-bottom: 0;
+    animation: bounce 1s infinite;
   }
   .mob-scroll-dir {
     display: none;
   }
+  #gesture-nav-icon {
+    font-size: 7rem;
+    cursor: default;
+  }
+  .gest-explainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    height: 65vh;
+    width: 70vw;
+    opacity: 0;
+    top: 40px;
+    background-color: white;
+    border-radius: 15px;
+    -webkit-transition: opacity 0.6s; /* Safari */
+    //-webkit-transition-timing-function: linear; /* Safari */
+    transition: opacity 0.6s;
+    -webkit-box-shadow: 1px 1px 30px 5px rgba(60,60,60,.2);
+    -moz-box-shadow: 1px 1px 30px 5px rgba(60,60,60,.2);
+    box-shadow: 1px 1px 30px 5px rgba(60,60,60,.2);
+    //transition-timing-function: linear;
+    h3 {
+      color: rgba(60,60,60,.5);
+      margin: -35px 0 5px 0;
+    }
+    p {
+      width: 56vw;
+      font-size: 1.25rem;
+      color: rgba(60,60,60,.5);
+      margin: 7px 0;
+    }
+  }
   h2 {
-    margin-top: -1rem;
+    margin-top: -2rem;
+    margin-bottom: 8rem;
     font-size: 2rem;
     text-transform: lowercase;
     font-weight: 100;
   }
+}
+
+@media only screen and (max-width: 920px) {
+    .touchless h1 {
+      font-size: 7rem;
+    }
+    .touchless .gest-explainer {
+      height: 56vh;
+      padding-top: 30px;
+    }
 }
 
 #second {
