copy edit gesture nav explainer and add opacity

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,8 +22,8 @@
           <h2>full stack developer</h2>
           <div class='gest-explainer'>
             <h3>Gesture Navigation</h3>
-            <p>If you let this portfolio access your camera, you can scroll through the pages by waving your hand up and down or side to side.</p>
-            <p>Don't worry, it doesn't register any video or image data.</p>
+            <p>If you let this site access your camera, you can scroll through the pages by waving your hand up and down or side to side.</p>
+            <p>(Don't worry, it doesn't register any video or image data.)</p>
             <p>If you prefer to keep your camera off, you can scroll normally.</p>
           </div>
           <p class='scroll-dir'><i id='gesture-nav-icon' class="material-icons">videocam</i></p>
